# time-tracker

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Caddyfile  Makefile  PROJECT.md  README.md  REQUIREMENTS.md  TASKS.md  WORKFLOW.md  compose.override.yaml  compose.yaml  docker-bake.hcl
agents/: architecture-principles.md  coding-guidelines.md  containerization.md  definition-of-done.md  development-rules.md  review-checklist.md  security.md  system-prompt.md
api/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
api/alembic/: env.py
api/alembic/versions/: 2e8f1a3b5c7d_make_datetimes_timezone_aware.py  4c9d8e7f2a1b_add_users_and_user_id_to_projects.py  5a1b2c3d4e5f_add_is_admin_to_users.py  897734e567dd_initial.py
api/app/: main.py
api/app/api/: deps.py
api/app/api/routes/: __init__.py  admin.py  auth.py  entries.py  projects.py  reports.py
api/app/core/: config.py  security.py
api/app/models/: __init__.py  project.py  time_entry.py  user.py
api/app/repositories/: entry_repository.py  project_repository.py  user_repository.py
api/app/schemas/: __init__.py  auth.py  project.py  report.py  time_entry.py
api/app/services/: auth_service.py  entry_service.py  project_service.py  report_service.py
api/tests/: conftest.py  test_auth.py  test_entries.py  test_projects.py
design-system/: design-system.md
docs/: api-spec.md  business-rules.md  docker-image-build.md  glossary.md  user-stories.md
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  (+2 more)
(+42 files in other folders)
